<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ImageView
        android:id="@+id/image_drink"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:src="@drawable/espresso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_of_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.65"
        android:background="@color/colorAccent"
        android:textColor="@color/colorBackground"
        android:textSize="20sp"
        android:gravity="right"
        app:layout_constraintBottom_toBottomOf="@+id/image_drink"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/cap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_drink">

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text= "@string/Ingredients"
            android:textStyle="bold"
            android:textColor="@color/colorBackground"
            android:textSize="30sp" />

        <ListView
            android:id="@+id/listIngredients"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/colorBackground"
            android:dividerHeight="1px" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            style="@style/Divider.Horizontal" />

        <LinearLayout
            android:id="@+id/sugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sugar"
                android:layout_weight="1"
                android:textColor="@color/colorBackground"
                android:textStyle="bold"
                android:textSize="18sp" />

            <Space
                android:layout_width="20dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.SwitchCompat
                android:id = "@+id/switch_compat"
                android:checked="false"
                android:layout_weight="0.1"
                app:showText="false"
                android:theme="@style/SCBSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Size"
            android:textStyle="bold"
            android:textColor="@color/colorBackground"
            android:textSize="30sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@drawable/rounded_new_background">
            <Button
                android:id = "@+id/buttonS"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_filled_back"/>
            <Button
                android:id = "@+id/buttonM"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:background="@color/colorBackground"/>
            <Button
                android:id = "@+id/buttonL"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:background="@color/colorBackground"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:id="@+id/quantity_regulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id = "@+id/button_minus"
                android:background="@color/colorAccent"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/icons_minus"/>

            <Button
                android:id = "@+id/quantity"
                android:layout_weight="1.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:background="@color/colorBackground" />

            <Button
                android:id = "@+id/button_plus"
                android:background="@color/colorAccent"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icons_plus" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/total_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorBackground"
        android:text ="@string/Total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cap" />

    <Button
        android:id="@+id/button_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/AddCart"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_new_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_cost" />

</androidx.constraintlayout.widget.ConstraintLayout>